# my_searchable_encryption

./: .gitignore  LSSS.py  encrypt_keyword.py  my.py  my_scheme_with_financial_dataset.py  pre_process.py  preprocess_finance_corpus.py  pytest.ini  recover_key.py  recover_key_http_request.py  requirements.txt  save_shares.py  search_request.py  search_server.py  sgx_requirements.txt  sort_enc_result.py  test_dec.py  test_enc.py  test_enc_speed.ipynb  user1.py
combine_secret_and_sort_enc_results_in_sgx/src/: crypto.rs
enc_rust/: Cargo.toml  pyproject.toml
enc_rust/src/: lib.rs
sort_enc_results/src/: lib.rs
sort_enc_results_in_sgx/: Cargo.toml
sort_enc_results_in_sgx/src/: lib.rs  main.rs  recover_secret.rs
tests/: test_LSSS_combine.py  test_LSSS_share.py  test_build_inverted_index.py  test_choose_out_keyword.py  test_count_keyword_appearance.py  test_count_word_appearance_per_doc.py  test_preprocess_finance_corpus.py  test_recover_key.py  test_recover_key_http_request.py  test_save_shares.py  test_search.py  test_sort_enc_result.py
