[package]
name = "enc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "enc_rust"
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
ecb = {version = "0.1.2",features = ["alloc"]}
mimalloc = "0.1.47"
pyo3 = "0.25.1"
