[package]
name = "sort_enc_results"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
aes = { version = "0.8.4"}
base64 = "0.22.1"
ecb = { version = "0.1.2", features = ["alloc"] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
pyo3 = { version = "0.24.2", features = ["auto-initialize"]}